css/styles.css
/* ... */
.big-red:hover::before { --ring-inner: 64.5%; --ring-outer: 69%; }

/* Green */
.big-green { color: whitesmoke; }
.big-green > img.bg-image {
    position: absolute; inset: 0; width: 100%; height: 100%;
    object-fit: cover; border-radius: inherit; filter: grayscale(100%);
    z-index: 0; transition: transform 400ms ease; transform: scale(1);
}
.big-green:hover > img.bg-image { transform: scale(1.06); }
.big-green::before {
  content: ""; position: absolute; inset: 0; border-radius: 50%; pointer-events: none;
  background-image: radial-gradient(circle at 50% 50%,
    rgba(0,128,0, 0) var(--ring-inner),
    rgba(0,128,0, 0.1) calc(var(--ring-inner) + 4%),
    rgba(0,128,0, 1) var(--ring-outer)
  );
  transition: --ring-inner 400ms ease, --ring-outer 400ms ease;
}
.big-green::after {
    content: ""; position: absolute; inset: 0; border-radius: inherit;
    background: rgba(0, 0, 0, 0.65); pointer-events: none; z-index: 0;
}
.big-green:hover::before { --ring-inner: 64.5%; --ring-outer: 69%; }

/* Blue */
.big-blue { color: whitesmoke; }
.big-blue > img.bg-image {
    position: absolute; inset: 0; width: 100%; height: 100%;
    object-fit: cover; border-radius: inherit; filter: grayscale(100%);
    z-index: 0; transition: transform 400ms ease; transform: scale(1);
}
.big-blue:hover > img.bg-image { transform: scale(1.06); }
.big-blue::before {
  content: ""; position: absolute; inset: 0; border-radius: 50%; pointer-events: none;
  background-image: radial-gradient(circle at 50% 50%,
    rgba(0,0,255, 0) var(--ring-inner),
    rgba(0,0,255, 0.1) calc(var(--ring-inner) + 4%),
    rgba(0,0,255, 1) var(--ring-outer)
  );
  transition: --ring-inner 400ms ease, --ring-outer 400ms ease;
}
.big-blue::after {
    content: ""; position: absolute; inset: 0; border-radius: inherit;
    background: rgba(0, 0, 0, 0.65); pointer-events: none; z-index: 0;
}
.big-blue:hover::before { --ring-inner: 64.5%; --ring-outer: 69%; }

/* Shared image layering */
.bg-image {
    position: absolute; inset: 0; width: 100%; height: 100%;
    object-fit: cover; border-radius: inherit; filter: grayscale(100%); z-index: 0;
}
.big-red::before { z-index: 1; } .big-red > * { position: relative; z-index: 2; }
.big-green::before { z-index: 1; } .big-green > * { position: relative; z-index: 2; }
.big-blue::before { z-index: 1; } .big-blue > * { position: relative; z-index: 2; }
@media only screen and (max-width: 991px) { .big-red, .big-green, .big-blue { height: auto; width: 100%; } }

/* ===========================
   Slick arrows and lists
   =========================== */
.prev, .next{
    z-index: 980;
    font-family: anybody;
    height: 100vh;
    border: 1px solid rgb(16, 16, 16);
    background-color: whitesmoke;
    font-size: 8rem;
    font-weight:100;
    color: rgb(16, 16, 16);
}
.slick-list {
    width: 66.6666666667%;
    padding: 0px !important;
}
.project-carousel .slick-list { 
    width: 100vw; 
    height: 100%;
}
.project-carousel .slick-track {
    display: flex !important;
    align-items: center !important;
    height: 100%;
}
@media only screen and (max-width: 575px) {
    .rgb {
        /* margin-top: 2px !important; */
    }
    .index-portfolio {
        height: calc(100svh - 71px);
        position: relative;
        min-height: unset !important;
    }
    .index-portfolio .prev, .index-portfolio .next { 
        position: absolute; 
    }
    .index-portfolio .prev {
        left: -1px; 
        top: calc(100% - 71px); 
        height: 72px; 
        font-size: 6rem; 
        line-height: 0em; 
        width: 72px; 
        background-color: whitesmoke;
    }
    .index-portfolio .next {
        right: -1px; 
        top: calc(100% - 71px); 
        height: 72px; 
        font-size: 6rem; 
        line-height: 0em; 
        width: 72px; 
        background-color: whitesmoke;
    }
    .slick-list { width: 100%; }
    .index-carousel-container, .index-carousel, 
    .index-carousel .slick-list, .index-carousel .slick-track,
    .index-carousel .slide { 
        height: inherit; 
    }
    .index-carousel .slide { 
        padding-top: 36px;
    }
}

/* ===========================
   Footer
   =========================== */
.other-project {
    z-index: 1000000;
    align-items: center;
    position: fixed;
    bottom: 35px;
    background-color: whitesmoke;
    border-top: rgb(16, 16, 16) 1px solid;
    border-bottom: rgb(16, 16, 16) 1px solid;
    height: 36px !important;
}
.show-large .other-project { 
    border-right: rgb(16, 16, 16) 1px solid; 
} 
@media only screen and (max-width: 599px) { 
    .show-small .other-project { 
        bottom: 71px; 
    } 
}
    .fino { 
        font-weight: 100; 
    }
    .titulo-container { 
        height: 56%; 
    }
    .tags {
    font-size: 1rem; 
    list-style: none; 
    font-weight: lighter; 
    position: absolute; 
    margin-top: 25%;
    text-align: center;
}
@media only screen and (max-width: 499px) { .tags { font-size: 0.8rem; } }
footer {
    border-top: 1px solid rgb(16, 16, 16);
    border-bottom: 1px solid rgb(16, 16, 16);
    background-color: whitesmoke;
    position: fixed;
    width: 100%;
    height: 36px;
    z-index: 1000000;
    bottom: 0; 
}
.borders {
    border-left: 1px solid rgb(16, 16, 16);
    border-right: 1px solid rgb(16, 16, 16);
    height: 36px;
}
.ajuste { margin-top: 0.09em; position: relative; }
.footer-mobile .container-carousel {
    position: absolute;
    overflow: hidden;
    height: 36px;
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 1.1em;
    border: transparent;
    border-top: solid 1px rgb(16, 16, 16);
    background-color: whitesmoke;
    transition: 0.5s;
    bottom: 35px;
}
@media only screen and (min-width: 600px) { .footer-mobile { display: none; } }
.h-link { position: absolute; height: 10px; }
.arrow-link { padding-left: 8px; padding-top: 4px; font-weight: 100; }
/* ... */

